src/test/ui/issues/issue-18118.stderr
error[E0597]: `p` does not live long enough
  --> $DIR/issue-18118.rs:4:9
   |
LL | /     const z: &'static isize = {
LL | |         let p = 3;
LL | |         &p
   | |         ^^ borrowed value does not live long enough
LL | |     };
   | |_____-- borrow later used here
   |       |
   |       `p` dropped here while still borrowed

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
